--- a/css/styles.css
+++ b/css/styles.css
@@ -31,24 +31,20 @@ img {
 .site-nav .link.current {
   color: var(--accent-color);
   display: block;
- position: relative;
-
-
+  position: relative;
 }
-.site-nav .link.current::after{
-  
-  background:var(--accent-color);
-  content: "";
+.site-nav .link.current::after {
+  background: var(--accent-color);
+  content: '';
   display: block;
   position: absolute;
   margin-top: 29px;
-border-radius: 2px;
+  border-radius: 2px;
   width: 100%;
-   height: 4px;
+  height: 4px;
 
-
-background: #2196F3;
-border-radius: 2px;
+  background: #2196f3;
+  border-radius: 2px;
 }
 
 .logo {
@@ -118,7 +114,6 @@ border-radius: 2px;
   justify-content: center;
 }
 
-
 .link {
   color: var(--primary-text-color);
   text-decoration: none;
@@ -151,21 +146,17 @@ header nav {
 .icon-mail {
   margin-right: 10px;
   fill: currentColor;
- 
 }
 .icon-mail:hover {
   fill: var(--accent-color);
 }
 
-
 .site-nav .link {
   margin-right: 50px;
-   transition-property: color;
+  transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
 }
-
 
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -183,7 +174,7 @@ header nav {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link-flex:hover{
+.link-flex:hover {
   color: var(--accent-color);
 }
 .section-hero {
@@ -232,7 +223,6 @@ header nav {
 
   justify-content: center;
 }
-
 
 .btn-portfolio-list .btn-portfolio {
   margin-right: 8px;
@@ -291,10 +281,9 @@ header nav {
   border-radius: 4px;
   border: 0;
 
-  transition: 
-  color 250ms cubic-bezier(0.4,0,0.2,1),
-  background-color 250ms cubic-bezier(0.4,0,0.2,1),
-  box-shadow 250ms cubic-bezier(0.4,0,0.2,1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-portfolio:hover,
@@ -303,7 +292,6 @@ header nav {
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-
 }
 .visually-hidden {
   position: absolute;
@@ -313,47 +301,41 @@ header nav {
   margin: -1px;
 }
 
-.image-port{
+.image-port {
   position: relative;
   display: flex;
   overflow: hidden;
-  
 }
 
-.image-overlay{
+.image-overlay {
   position: absolute;
-  top:0;
+  top: 0;
   width: 100%;
-height: 100%;
-padding: 63px 24px;
-background: rgba(33, 150, 243, 0.9);
-color: white;
-font-weight: 400;
-font-size: 18px;
-line-height: 28px;
-letter-spacing: 0.03em;
-color: #FFFFFF;
-text-decoration: none;
+  height: 100%;
+  padding: 63px 24px;
+  background: rgba(33, 150, 243, 0.9);
+  color: white;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  text-decoration: none;
 
-opacity: 0;
-transform: translateY(100%);
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-/* overflow: hidden; */
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* overflow: hidden; */
 }
 
 .portfolio-hover:hover .image-overlay,
-.image-overlay:focus{
-  opacity:1;
+.image-overlay:focus {
+  opacity: 1;
   transform: translateY(0);
 }
 
-
-
-
-
 /* якості */
-.quality{
-  
+.quality {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -426,15 +408,9 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #ffffff;
   fill: #afb1b8;
 
-
-     transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-   
-  
-  }
-  
-
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .full-icon:hover,
 .full-icon:focus {
@@ -453,33 +429,26 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 50px;
 }
 
-.photo-discr{
+.photo-discr {
   position: absolute;
- 
-width: 100%;
-height: 70px;
-bottom:0;
-display: flex;
-justify-content: center;
-align-items: center;
-background: rgba(47, 48, 58, 0.8);
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
 
-text-transform: uppercase;
-color: #FFFFFF;
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(47, 48, 58, 0.8);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
 
-
-
+  text-transform: uppercase;
+  color: #ffffff;
 }
-.photo{
+.photo {
   position: relative;
 }
-
-
-
-
 
 /* секція команда */
 .section-team {
@@ -519,7 +488,7 @@ color: #FFFFFF;
   color: #afb1b8;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-   border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link {
@@ -588,9 +557,9 @@ color: #FFFFFF;
   padding: 12px;
   display: block;
   border-radius: 50%;
- background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.1);
 
- transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .full-iconf:hover,
@@ -609,42 +578,84 @@ color: #FFFFFF;
   color: #ffffff;
 }
 
-.backdrop{
-  position: fixed ;
+.backdrop {
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden{
+.backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  /* на всяк випадок */
+  /* visibility: hidden; */
+  
 }
-.modal{
+
+.backdrop.is-hidden .modal {
+  transform: scale(0.8);
+}
+.modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   height: 581px;
   width: 528px;
-  
-  background-color:#FFFFFF;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-modal {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 8px;
+}
+
+button {
+  border: hidden;
+}
+
+.footer-heading{
+  margin-bottom: 20px;
+}
+.enter-login{
+  display:flex;
+}
+.enter-login input{
+  margin-right: 30px;
+  width: 358px;
+height: 50px;
+border: 1px solid rgba(255, 255, 255, 0.3);
+/* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); */
 border-radius: 4px;
-  
-  
+background-color: #2F303A;
+padding: 15px 16px;
+margin: 0;
+ color: rgba(255, 255, 255, 0.6);
 }
 
-.button-modal{
-position: absolute;
-top: 0;
-right: 0;
-margin: 8px;
 
-}
-
-button{
-border: hidden;
+.enter-login button{
+  width: 200px;
+height: 50px;
+background: #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+margin-left: 12px;
+color: white;
+font-weight: 700;
+font-size: 16px;
+line-height: 30px;
+cursor: pointer;
 }
