--- a/css/styles.css
+++ b/css/styles.css
@@ -724,6 +724,7 @@ cursor: pointer;
   
   display: inline-block;
 }
+
 label{
   display: flex;
   flex-direction: column;
@@ -756,6 +757,15 @@ padding-left: 42px;
 }
   textarea{
     padding: 10px;
+    
+    border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+resize: none;
+
+  }
+
+  textarea:hover{
+    border-color: var(--accent-color);
   }
 
 
@@ -767,6 +777,7 @@ line-height: 14px;
 letter-spacing: 0.01em;
 color: #757575;
   }
+  
   form h3{
     font-weight: 700;
 font-size: 20px;
@@ -788,6 +799,7 @@ margin: auto;
 align-items: center;
 justify-content: center;
 color: #FFFFFF;
+margin-top: 10px;
   }
 
 .form-field{
@@ -795,9 +807,7 @@ color: #FFFFFF;
   
 }
 
-
-
-  .icon-input{
+ .icon-input{
     
   position: absolute;
   height: 20px;
