--- a/css/styles.css
+++ b/css/styles.css
@@ -761,6 +761,12 @@ padding-left: 42px;
     border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 resize: none;
+font-weight: 400;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.01em;
+color: rgba(117, 117, 117, 0.5);
+
 
   }
 
