--- a/css/styles.css
+++ b/css/styles.css
@@ -731,7 +731,7 @@ label{
   margin-bottom: 10px;
 }
 
-input{
+.input-form{
   height: 40px;
   width: 448px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -831,11 +831,28 @@ label.box{
   flex-direction: row;
   
   align-items: center;
+  position: relative;
 }
 .custom-input {
   display: inline-flex;
   width: 15px;
+}
   
   /* position: relative; */
   /* border: 4px solid transparent;
   color: #fff; */
+
+
+
+  .icon-check{
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    /* left: 15px; */
+  }
+
+  .box .hidden{
+ appearance: none;
+-moz-appearance: none;
+    -webkit-appearance: none;
+}
