--- a/css/styles.css
+++ b/css/styles.css
@@ -597,8 +597,7 @@ header nav {
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
-  /* на всяк випадок */
-  /* visibility: hidden; */
+ 
   
 }
 
@@ -633,6 +632,10 @@ header nav {
   margin-top: 8px;
   margin-right: 8px;
  border: none;
+
+ transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   
   }
 
@@ -642,10 +645,6 @@ fill: #2196F3;
 }
 
 
-button {
-  /* border: hidden; */
-  
-}
 
 .footer-heading{
   margin-bottom: 20px;
@@ -689,7 +688,7 @@ color: #FFFFFF;
   width: 358px;
 height: 50px;
 border: 1px solid rgba(255, 255, 255, 0.3);
-/* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); */
+
 border-radius: 4px;
 background-color: #2F303A;
 padding: 15px 16px;
@@ -762,9 +761,8 @@ outline: none;
 
 
 
-/* .form-field .text:hover, */
+
 .form-field input:hover,
-/* .form-field .text:focus, */
 .form-field input:focus{
   transition-property: border-color;
   transition-duration: 250ms;
@@ -772,26 +770,18 @@ outline: none;
 
 }
 
-/* .form-field .text:hover, */
+
 .form-field input:hover,
-/* .form-field .text:focus, */
 .form-field input:focus{
   border-color: hsl(207, 90%, 54%);
 }
 
-
-
-
-  
-  
 
 .form-field:hover .icon-input,
 .form-field:focus .icon-input{
   fill: var(--accent-color);
   
 }
-
-
 
   textarea{
     padding: 10px;
@@ -800,6 +790,9 @@ outline: none;
 border-radius: 4px;
 resize: none;
 outline: none;
+transition-property:border-color ;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   }
 
@@ -842,9 +835,15 @@ justify-content: center;
 color: #FFFFFF;
 margin-top: 10px;
 cursor: pointer;
+transition-property: background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-.form-button:hover{
+
+
+
+  .form-button:hover{
   background: #188CE8;
 }
 
@@ -881,10 +880,6 @@ cursor: pointer;
   width: 15px;
 }
   
-  /* position: relative; */
-  /* border: 4px solid transparent;
-  color: #fff; */
-
 
 
   .icon-check{
