--- a/css/styles.css
+++ b/css/styles.css
@@ -919,14 +919,29 @@ margin-left: 3px;
 
 
 .check-box{
+
   position: absolute;
   width: 16px;
   height: 15px;
   left: 13px;
 
-  background-image: url(../images/Vector.svg);
+  background-color: #FFFFFF;;
+  border-radius: 2px;
+  border: 2px solid #212121;
+  
 }
 
 .custom-input:checked + .check-box{
-  background-image: url(../images/icon-check.svg);
+  background-color:var(--accent-color);
+  border-color: var(--accent-color);
 }
+
+
+.box-vector{
+
+  position: absolute;
+  height: 10px;
+  width: 13px;
+top: 9px;
+left: 15px;
+} 
