--- a/css/styles.css
+++ b/css/styles.css
@@ -928,7 +928,10 @@ margin-left: 3px;
   background-color: #FFFFFF;;
   border-radius: 2px;
   border: 2px solid #212121;
-  
+
+transition: 
+background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .custom-input:checked + .check-box{
